Traduction et chargement

--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event received">L'appareil est prêt</p>
             </div>
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
